--- a/content-service/supervisord.conf
+++ b/content-service/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:django]
-command=python manage.py runserver 0.0.0.0:8000
+command= python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 
@@ -17,3 +17,4 @@ stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 autostart=true
 autorestart=true
+
